--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.2.0",
+    "@gridsome/remark-prismjs": "^0.3.0",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.0",
     "gridsome": "^0.7.13",
-    "gridsome-plugin-remark-shiki": "^0.3.1",
-    "gridsome-source-static-meta": "^1.0.1",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.1",
-    "prism-themes": "^1.4.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2"
   },
