--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#Generic
 *.log
 .cache
 .DS_Store
@@ -6,3 +7,10 @@ node_modules
 dist
 .env
 .env.*
+
+#PHPStorm
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
