--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-#Generic
 *.log
 .cache
 .DS_Store
@@ -7,10 +6,4 @@ node_modules
 dist
 .env
 .env.*
-
-#PHPStorm
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+.idea
