--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@gridsome/remark-prismjs": "^0.3.0",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.0",
-    "gridsome": "^0.7.23",
+    "gridsome": "0.7.22",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.1",
     "sass": "^1.26.3",
