--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.2.0",
-    "@gridsome/remark-prismjs": "^0.3.0",
+    "@fullhuman/postcss-purgecss": "^3.0.0",
+    "@gridsome/remark-prismjs": "^0.5.0",
     "@gridsome/source-filesystem": "^0.6.2",
-    "@gridsome/transformer-remark": "^0.6.0",
+    "@gridsome/transformer-remark": "^0.6.4",
+    "autoprefixer": "^9.8.6",
     "gridsome": "0.7.22",
-    "postcss-import": "^12.0.1",
-    "postcss-nested": "^4.2.1",
-    "sass": "^1.26.3",
-    "sass-loader": "^8.0.2"
+    "postcss": "^7.0.35",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/vue-fontawesome": "^0.1.9",
-    "gridsome-plugin-tailwindcss": "^2.2.43"
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
+    "gridsome-plugin-tailwindcss": "^4.1.1",
+    "postcss-import": "^13.0.0",
+    "postcss-preset-env": "^6.7.0"
   }
 }
