Update Netlify config

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,22 @@
+[build]
+    base = '/'
+    publish = 'dist'
+    command = 'nuxt generate'
+    environment = {
+        NODE_VERSION = "18.0.0"
+    }
+
 [[redirects]]
   from = "/notes"
   to = "/posts"
   status = 301
   force = true
+
+[[headers]]
+  for = "/*"
+
+  [headers.values]
+  X-Frame-Options = "DENY"
+  X-XSS-Protection = "1; mode=block"
+  X-Content-Type-Options = "nosniff"
+  cache-control = "public, max-age=10000, must-revalidate"
