Remove shiki and update build command

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,19 +1,9 @@
 [build]
-    base = '/'
-    publish = 'dist'
-    command = 'nuxt generate'
+  publish = 'dist'
+  command = 'npm run generate'
 
 [[redirects]]
   from = "/notes"
   to = "/posts"
   status = 301
   force = true
-
-[[headers]]
-  for = "/*"
-
-  [headers.values]
-  X-Frame-Options = "DENY"
-  X-XSS-Protection = "1; mode=block"
-  X-Content-Type-Options = "nosniff"
-  cache-control = "public, max-age=10000, must-revalidate"
