--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.5.2",
-    "@nuxt/image": "^0.7.1",
-    "shiki": "^0.14.2"
+    "@nuxt/image": "^0.7.1"
   }
 }
