--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.5.2",
-    "@nuxt/image": "^0.7.1"
+    "@nuxt/image": "^0.7.1",
+    "@ubclaunchpad/vue-fathom": "^2.0.0"
   }
 }
