--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.3.1",
-    "nuxt-og-image": "^2.0.0-beta.40",
+    "nuxt-og-image": "^1.5.9",
     "postcss": "^8.4.21",
     "sass": "^1.62.1",
     "tailwindcss": "^3.2.7"
