--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.7.2",
+    "@nuxt/image": "^1.0.0-rc.1",
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.6.0",
     "postcss": "^8.4.21",
@@ -17,8 +19,6 @@
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
-    "@nuxt/content": "^2.5.2",
-    "@nuxt/image": "^0.7.1",
     "@ubclaunchpad/vue-fathom": "^2.0.0"
   }
 }
