--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.7.2",
+    "@nuxt/image": "^1.0.0-rc.1",
     "autoprefixer": "^10.4.14",
-    "nuxt": "^3.3.1",
-    "nuxt-og-image": "^2.0.0-beta.40",
+    "nuxt": "^3.6.0",
     "postcss": "^8.4.21",
     "sass": "^1.62.1",
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
-    "@nuxt/content": "^2.5.2",
-    "@nuxt/image": "^0.7.1",
     "@ubclaunchpad/vue-fathom": "^2.0.0"
   }
 }
