--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/content": "^2.7.2",
     "@nuxt/image": "^1.0.0-rc.1",
+    "@nuxtjs/color-mode": "^3.3.0",
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.6.0",
     "postcss": "^8.4.21",
