--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@nuxt/content": "^2.7.2",
     "@nuxt/image": "^1.0.0-rc.1",
     "@nuxtjs/color-mode": "^3.3.0",
+    "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.6.0",
     "postcss": "^8.4.21",
     "sass": "^1.62.1",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "typescript": "^5.1.6",
+    "vue-tsc": "^1.8.8"
   },
   "dependencies": {
     "@ubclaunchpad/vue-fathom": "^2.0.0"
