--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/content": "^2.7.2",
     "@nuxt/image": "^1.0.0-rc.1",
     "@nuxtjs/color-mode": "^3.3.0",
+    "@nuxtjs/google-fonts": "^3.0.2",
     "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.6.0",
