--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "terdelyicouk",
-  "version": "1.0.0",
+  "name": "terdelyi-website",
+  "description": "My website",
   "private": true,
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@nuxt/content": "^2.7.2",
-    "@nuxt/image": "^1.0.0-rc.1",
-    "@nuxtjs/color-mode": "^3.3.0",
-    "@nuxtjs/google-fonts": "^3.0.2",
-    "@tailwindcss/forms": "^0.5.4",
-    "autoprefixer": "^10.4.14",
-    "nuxt": "^3.6.0",
-    "postcss": "^8.4.21",
-    "sass": "^1.62.1",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^5.1.6",
-    "vue-tsc": "^1.8.8"
+    "prebuild": "./vendor/bin/phanstatic build",
+    "build": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch"
   },
   "dependencies": {
-    "@ubclaunchpad/vue-fathom": "^2.0.0"
+    "highlight.js": "^11.9.0"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.10.0",
+    "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^9.5.1",
+    "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   }
 }
