--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
   ],
   "require": {
     "php": ">=8.2",
-    "terdelyi/phanstatic": "dev-dev"
+    "terdelyi/phanstatic": "dev-main"
   },
   "repositories": [
     {
-      "type": "path",
-      "url": "../phanstatic"
+      "type": "vcs",
+      "url": "https://github.com/terdelyi/phanstatic.git"
     }
   ],
   "minimum-stability": "dev",
