--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
     "@tailwindcss/forms": "^0.5.7",
+    "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
+    "mini-css-extract-plugin": "^2.8.1",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^9.5.1",
