--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@babel/preset-env": "^7.24.0",
     "@tailwindcss/forms": "^0.5.7",
     "babel-loader": "^9.1.3",
-    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
+    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.8.1",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.1",
