--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   ],
   "require": {
     "php": ">=8.2",
-    "terdelyi/phanstatic": "dev-develop"
+    "terdelyi/phanstatic": "dev-main"
   },
   "repositories": [
     {
